Start creating build process for windows application
Update changelog

--- a/src/bytenote/releaseNotes.html
+++ b/src/bytenote/releaseNotes.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style type="text/css">
-p { text-align: center }
-h1 { text-align: center }
-h2 { text-align: center }
-h3 { text-align: center }
-h4 { text-align: center }
-h5 { text-align: center }
-h6 { text-align: center }
-</style>
-</head>
-<body>
-
-</body>
+	<head>
+		<style type="text/css">
+			p {text-align: center;}
+		</style>
+	</head>
+	<body>
+		<p>
+		<div style="background-color: lime;">
+			<h1 style="text-align: center;">ByteNote v2.0.0
+				<br/>
+				<img src="logo.png" height="128" width="128">
+				<img src="logo.png" height="128" width="128">
+				<img src="logo.png" height="128" width="128">
+				<img src="logo.png" height="128" width="128">
+			</h1>
+		</div>
+		<p>
+		<ul style="display: table; margin: 0 auto;">
+  			<li style="font-size: 24px"> C57note64 is now ByteNote </li>
+  			<li style="font-size: 24px"> New file type: ".bynt" (The ".cnote" file type is still supported, but it is not recommended.)</li>
+  			<li style="font-size: 24px"> Updates can now be installed from inside ByteNote </li>
+  			<li style="font-size: 24px"> ByteNote will warn you if you try to exit without saving your notes </li>
+  			<li style="font-size: 24px"> When you open a .cnote file, ByteNote will offer to update it to the .bynt file type </li>
+			<li style="font-size: 24px"> ByteNote will wrap text in notes if it cannot be displayed on a single line </li>
+		</ul>
+	</body>
 </html>
