--- a/src/bytenote/releaseNotes.html
+++ b/src/bytenote/releaseNotes.html
@@ -18,12 +18,8 @@
 		</div>
 		<p>
 		<ul style="display: table; margin: 0 auto;">
-  			<li style="font-size: 24px"> C57note64 is now ByteNote </li>
-  			<li style="font-size: 24px"> New file type: ".bynt" (The ".cnote" file type is still supported, but it is not recommended.)</li>
-  			<li style="font-size: 24px"> Updates can now be installed from inside ByteNote </li>
-  			<li style="font-size: 24px"> ByteNote will warn you if you try to exit without saving your notes </li>
-  			<li style="font-size: 24px"> When you open a .cnote file, ByteNote will offer to update it to the .bynt file type </li>
-			<li style="font-size: 24px"> ByteNote will wrap text in notes if it cannot be displayed on a single line </li>
+  			
+  			<li style="font-size: 24px"> Minor changes to the GUI </li>
 		</ul>
 	</body>
 </html>
