--- a/src/bytenote/releaseNotes.html
+++ b/src/bytenote/releaseNotes.html
@@ -8,7 +8,7 @@
 	<body>
 		<p>
 		<div style="background-color: lime;">
-			<h1 style="text-align: center;">ByteNote v2.0.1
+			<h1 style="text-align: center;">ByteNote v2.0.2
 				<br/>
 				<img src="logo.png" height="128" width="128">
 				<img src="logo.png" height="128" width="128">
@@ -19,7 +19,7 @@
 		<p>
 		<ul style="display: table; margin: 0 auto;">
   			
-  			<li style="font-size: 24px"> Minor changes to the GUI </li>
+  			<li style="font-size: 24px"> Fix minor bugs </li>
 		</ul>
 	</body>
 </html>
