--- a/src/bytenote/releaseNotes.html
+++ b/src/bytenote/releaseNotes.html
@@ -19,7 +19,11 @@
 		<p>
 		<ul style="display: table; margin: 0 auto;">
   			
-  			<li style="font-size: 24px"> Fixed a bug that prevented updates while running on Linux </li>
+  			<li style="font-size: 24px"> Show download speed while updating </li>
+  			<li style="font-size: 24px"> Show approximate time remaining while updating </li>
+  			<li style="font-size: 24px"> Add an option to view the release notes </li>
+  			<li style="font-size: 24px"> Bug fixes </li>
+  			
 		</ul>
 	</body>
 </html>
